# rules_templ

./: MODULE.bazel  README.md
templ/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  tool.bzl
templ/private/: BUILD.bazel  versions.bzl
