"Bazel dependencies for rules_templ"

module(
    name = "rules_templ",
)

bazel_dep(name = "package_metadata", version = "0.0.5")

bazel_dep(name = "rules_go", version = "0.61.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.51.3", repo_name = "bazel_gazelle")

bazel_dep(name = "rules_license", version = "1.0.0")
